--- a/style.css
+++ b/style.css
@@ -1,5 +1,126 @@
-h1 {
-  background-color: #000;
+@charset "UTF-8";
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.font {
+  font-family: "Montserrat", sans-serif;
+}
+
+.container-main {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.bestsellers {
+  margin-top: 60px;
+  font-weight: 700;
+  color: #EA5455;
+}
+
+.container-scroll {
+  display: flex;
+  justify-content: space-around;
+}
+
+.box-shadow {
+  margin: 30px 0px 0px 0px;
+  padding: 8px;
+  box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534);
+}
+
+.img-all {
+  height: 135px;
+  width: 150px;
+}
+
+.ham {
+  margin-top: 3px;
+  font-weight: 700;
+}
+
+.price-stock {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+
+.price-stock p:nth-child(2) {
+  color: rgb(30, 223, 30);
+}
+
+/*Offre par catégorie*/
+.offer {
+  display: flex;
+  font-weight: 700;
+  align-items: baseline;
+  color: #EA5455;
+}
+
+.see-all {
+  margin-left: 10px;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 20px;
+}
+
+.categorie {
+  border: 2px solid black;
 }
 
 /*# sourceMappingURL=style.css.map */
