--- a/style.css
+++ b/style.css
@@ -1,5 +1,163 @@
-h1 {
-  background-color: #000;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.head {
+  background-color: rgb(239, 233, 233);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+}
+
+.logo_black {
+  margin-left: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.logo_black h1 {
+  margin-left: 15px;
+  font-weight: bold;
+}
+
+.info_1 {
+  width: 700px;
+}
+
+.info_1 h2 {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.incons_info {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bloc_contain {
+  display: flex;
+  align-items: center;
+}
+
+.icons {
+  background-color: #EA5455;
+  border-radius: 50%;
+  padding: 1px 5px 1.5px 5px;
+  text-align: center;
+}
+
+.bloc_contain li {
+  list-style: none;
+  padding-left: 10px;
+  margin-right: 50px;
+  font-size: 12px;
+}
+
+.nav_search {
+  display: flex;
+  background-color: #2d4059;
+  padding: 20px;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  justify-content: space-around;
+}
+
+.search {
+  padding-left: 200px;
+}
+
+.search select {
+  color: black;
+  height: 35px;
+  width: 130px;
+  border-radius: 8px;
+  padding-right: 10px;
+}
+
+.search input {
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 250px;
+  height: 30px;
+  border-radius: 10px;
+}
+
+.search button {
+  background-color: #EA5455;
+  color: white;
+  width: 130px;
+  padding: 8px;
+  border-radius: 10px;
+  border: none;
+}
+
+.nav_bar {
+  margin-right: 140px;
+}
+
+.nav_bar a {
+  padding-right: 15px;
+  padding-left: 15px;
+  text-decoration: none;
+  color: aliceblue;
 }
 
 /*# sourceMappingURL=style.css.map */
