--- a/style.css
+++ b/style.css
@@ -116,11 +116,16 @@ table {
 .grid {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  gap: 20px;
+  gap: 25px;
 }
 
-.categorie {
-  border: 2px solid black;
+.box-grid {
+  height: 168px;
+  width: 160px;
+  border-radius: 40px;
+  text-align: center;
+  color: white;
+  background-color: #2D4059;
 }
 
 /*# sourceMappingURL=style.css.map */
