--- a/styles/header.scss
+++ b/styles/header.scss
@@ -73,7 +73,7 @@ body{
 .search input{
     margin-left: 15px;
     margin-right: 15px;
-    width: 250px;
+    width: 200px;
     height: 30px;
     border-radius: 10px ;
 }
@@ -95,3 +95,4 @@ body{
     text-decoration: none;
     color: aliceblue;
 }
+//*****************choose
