--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ table {
   border-spacing: 0;
 }
 
-.font {
+body {
   font-family: "Montserrat", sans-serif;
 }
 
@@ -113,18 +113,37 @@ table {
   text-decoration: none;
 }
 
+.container-grid{
+  margin: 80px auto;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  gap: 25px;
+  gap: 15px;
 }
 
+
 .box-grid {
-  height: 168px;
-  width: 160px;
-  border-radius: 40px;
-  text-align: center;
+  height: 128px;
+  width: 120px;
+  border-radius: 18px;
   color: white;
   background-color: #2D4059;
+
 }
+
+.box-text {
+    margin-top: 25px;
+    text-align: center;
+
+    
+}
+
+.box-text p{
+  margin-top: 10px;
+}
+
+
+
 
