--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ table {
   border-spacing: 0;
 }
 
-body {
+.font {
   font-family: "Montserrat", sans-serif;
 }
 
@@ -113,37 +113,23 @@ body {
   text-decoration: none;
 }
 
-.container-grid{
-  margin: 80px auto;
-}
-
 .grid {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  gap: 15px;
+  gap: 25px;
 }
-
 
 .box-grid {
   height: 128px;
   width: 120px;
-  border-radius: 18px;
+  border-radius: 40px;
+  text-align: center;
   color: white;
   background-color: #2D4059;
-
 }
 
 .box-text {
-    margin-top: 25px;
-    text-align: center;
-
-    
+  margin-top: 26px;
 }
 
-.box-text p{
-  margin-top: 10px;
-}
-
-
-
-
+/*# sourceMappingURL=style.css.map */
