--- a/styles/home.scss
+++ b/styles/home.scss
@@ -70,8 +70,8 @@
 }
 
 .box-grid{
-    height: 168px;
-    width: 160px;
+    height: 128px;
+    width: 120px;
     border-radius: 40px;
     
     text-align: center;
@@ -80,8 +80,8 @@
     
 }
 
-i{
-    
+.box-text{
+    margin-top: 26px;
 }
 
 
