--- a/styles/header.scss
+++ b/styles/header.scss
@@ -99,20 +99,29 @@ body{
 
 .choose{
     margin: 0 auto;
+
 }
 .choose h4{
     margin: 100px 0px 70px 220px;
+    color: #EA5455;
+    font-weight: bold;
 }
 .choose_select{
     display: flex;justify-content: space-around;
-    padding: 0px 150px 0px 125px;
+    padding: 0px 135px 0px 135px;
 }
 .choose_img{
    margin-bottom: 50px;
+
 }
 .choose_img img{
     border: #2d4059 2px solid;
     height: 200px;
-    width: 230px;
-    margin-bottom: 30px;
+    width: 250px;
+    margin-bottom: 15px;
+}
+.choose_img p{
+    text-align: center;
+    color: #EA5455;
+    font-weight: bold;
 }
