--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -51,7 +52,180 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/* ********************************** */
+
+.legal {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  background-color: #2d4059;
+  color: #fff;
+}
+
+.footer_href {
+  display: flex;
+  justify-content: space-around;
+  padding: 50px;
+  background-color: #fffefe;
+  color: #2d4059;
+}
+
+.footer_contain {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer_contain a {
+  text-decoration: none;
+  padding: 10px;
+  font-weight: 500;
+}
+
+.footer_info {
+  background-color: #2d4059;
+  padding: 30px;
+}
+
+.footer_container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer_icons {
+  background-color: white;
+  height: 2px;
+  width: 2px;
+  border-radius: 25px;
+  padding: 12px;
+  color: #EA5455;
+}
+
+.footer_box {
+  width: 190px;
+  color: #fff;
+}
+
+.footer_box h4 {
+  font-size: 14px;
+}
+
+.footer_box p {
+  font-size: 12px;
+  padding-top: 10px;
+}
+
+.font {
+  font-family: "Montserrat", sans-serif;
+}
+
+.container-main {
+  max-width: 1050px;
+  margin: 0 auto;
+}
+
+.bestsellers {
+  margin-top: 60px;
+  font-weight: 700;
+  color: #EA5455;
+}
+
+.container-scroll {
+  display: flex;
+  justify-content: space-between;
+}
+
+.box-shadow {
+  margin: 30px 0px 0px 0px;
+  padding: 8px;
+  box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534);
+}
+
+.img-all {
+  height: 135px;
+  width: 150px;
+}
+
+.ham {
+  margin-top: 3px;
+  font-weight: 700;
+}
+
+.price-stock {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+
+.price-stock p:nth-child(2) {
+  color: rgb(30, 223, 30);
+}
+
+/*Offre par catégorie*/
+.offer {
+  display: flex;
+  font-weight: 700;
+  align-items: baseline;
+  color: #EA5455;
+  margin: 50px 0px 25px 0px;
+}
+
+.see-all {
+  margin-left: 10px;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 25px;
+}
+
+.box-grid {
+  height: 128px;
+  width: 120px;
+  border-radius: 40px;
+  text-align: center;
+  color: white;
+  background-color: #2D4059;
+}
+
+.box-text {
+  margin-top: 26px;
+}
+
+.choose {
+  margin: 0 auto;
+}
+
+.choose h4 {
+  margin: 50px 0px 50px 0px;
+  color: #EA5455;
+  font-weight: bold;
+}
+
+.choose_select {
+  display: flex;
+  justify-content: space-around;
+  padding: 0px 135px 0px 135px;
+}
+
+.choose_img {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.choose_img img {
+  border: #2d4059 2px solid;
+  height: 200px;
+  width: 230px;
+  margin-bottom: 30px;
+}
+
+.choose_img p {
+  color: #EA5455;
+  font-weight: bold;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
 }
@@ -160,119 +334,5 @@ body {
   text-decoration: none;
   color: aliceblue;
 }
-/**********************************/
 
-.container-main{
-  max-width: 1050px;
-  margin: 0 auto;
-}
-
-.bestsellers {
-  margin-top: 60px;
-  font-weight: 700;
-  color: #EA5455;
-}
-
-.container-scroll {
-  display: flex;
-  justify-content: space-between;
-}
-
-.box-shadow {
-  margin: 30px 0px 0px 0px;
-  padding: 8px;
-  box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534);
-}
-
-.img-all {
-  height: 135px;
-  width: 150px;
-}
-
-.ham {
-  margin-top: 3px;
-  font-weight: 700;
-}
-
-.price-stock {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 8px;
-}
-
-.price-stock p:nth-child(2) {
-  color: rgb(30, 223, 30);
-}
-
-/*Offre par catégorie*/
-.offer {
-  display: flex;
-  font-weight: 700;
-  align-items: baseline;
-  color: #EA5455;
-  margin: 50px 0px 25px 0px;
-}
-
-.see-all {
-  margin-left: 10px;
-  font-size: 12px;
-  text-decoration: none;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 25px;
-}
-
-.box-grid {
-  height: 118px;
-  width: 110px;
-  border-radius: 40px;
-  text-align: center;
-  color: white;
-  background-color: #2D4059;
-}
-
-.box-text {
-  margin-top: 26px;
-}
-/****************************/
-.choose {
-  margin: 0 auto;
-}
-
-.choose h4 {
-  margin: 50px 0px 50px 0px;
-  color: #EA5455;
-  font-weight: bold;
-}
-
-.choose_select {
-  display: flex;
-  justify-content: space-between;
-  
-}
-
-.choose_img {
-  margin-bottom: 50px;
-  text-align: center;
-}
-
-.choose_img img {
-  border: #2d4059 2px solid;
-  height: 200px;
-  width: 250px;
-  margin-bottom: 15px;
-}
-
-.choose_img p {
-  text-align: center;
-  color: #EA5455;
-  font-weight: bold;
-}
-.choose_img p{
-  color: #EA5455;
-  font-weight: bold;
-}
 /*# sourceMappingURL=style.css.map */
