--- a/style.css
+++ b/style.css
@@ -99,10 +99,12 @@ body {
 }
 
 .icons {
-  background-color: #EA5455;
   border-radius: 50%;
   padding: 1.5px 5.5px 1.5px 5.5px;
   text-align: center;
+
+  color: white;
+  background-color: #EA5455;
 }
 
 .bloc_contain li {
@@ -117,8 +119,7 @@ body {
   padding: 20px;
   align-items: center;
   align-content: center;
-  text-align: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .search {
@@ -128,14 +129,13 @@ body {
 .search select {
   color: black;
   height: 35px;
-  width: 130px;
   border-radius: 8px;
   padding-right: 10px;
 }
 
 .search input {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 6px;
+  margin-right: 6px;
   width: 200px;
   height: 30px;
   border-radius: 10px;
@@ -163,7 +163,8 @@ body {
 /**********************************/
 
 .container-main{
-  max-width: 1050px;
+  position: relative;
+  max-width: 910px;
   margin: 0 auto;
 }
 
@@ -173,20 +174,53 @@ body {
   color: #EA5455;
 }
 
+
 .container-scroll {
+  
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  
+}
+
+.arrow-left{
+
+  position: absolute;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-top: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 15px solid #EA5455;
+  transform: rotate(180deg);
+  top: 12%;
+  left: -12%;
+}
+
+.arrow-right{
+
+  position: absolute;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-top: 15px solid transparent;
+  border-right: 15px solid #EA5455;
+  border-bottom: 15px solid transparent;
+  border-left: 15px solid transparent;
+  transform: rotate(180deg);
+  top: 12%;
+  right: -12%;
 }
 
 .box-shadow {
-  margin: 30px 0px 0px 0px;
-  padding: 8px;
+  margin: 30px 20px 0px 0px;
+  padding: 18px 18px 6px 18px;
   box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534);
 }
 
 .img-all {
-  height: 135px;
-  width: 150px;
+  height: 155px;
+  width: 170px;
 }
 
 .ham {
