--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -51,7 +52,88 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/* ********************************** */
+
+.font {
+  font-family: "Montserrat", sans-serif;
+}
+
+.container-main {
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+.bestsellers {
+  margin-top: 70px;
+  font-weight: 700;
+  color: #EA5455;
+}
+
+.container-scroll {
+  margin: 0 auto;
+  display: flex;
+  max-width: 950px;
+}
+
+.box-shadow {
+  margin: 30px 20px 0px 0px;
+  padding: 18px;
+  box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534);
+}
+
+.img-all {
+  height: 160px;
+  width: 190px;
+}
+
+.ham {
+  margin-top: 3px;
+  font-weight: 700;
+}
+
+.price-stock {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 8px;
+}
+
+.price-stock p:nth-child(2) {
+  color: rgb(30, 223, 30);
+}
+
+/*Offre par catégorie*/
+.offer {
+  display: flex;
+  font-weight: 700;
+  align-items: baseline;
+  color: #EA5455;
+  margin: 50px 0px 25px 0px;
+}
+
+.see-all {
+  margin-left: 10px;
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 25px;
+}
+
+.box-grid {
+  height: 128px;
+  width: 120px;
+  border-radius: 40px;
+  text-align: center;
+  color: white;
+  background-color: #2D4059;
+}
+
+.box-text {
+  margin-top: 26px;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
 }
@@ -99,12 +181,11 @@ body {
 }
 
 .icons {
+  color: white;
+  background-color: #EA5455;
   border-radius: 50%;
   padding: 1.5px 5.5px 1.5px 5.5px;
   text-align: center;
-
-  color: white;
-  background-color: #EA5455;
 }
 
 .bloc_contain li {
@@ -134,8 +215,8 @@ body {
 }
 
 .search input {
-  margin-left: 6px;
-  margin-right: 6px;
+  margin-left: 15px;
+  margin-right: 15px;
   width: 200px;
   height: 30px;
   border-radius: 10px;
@@ -146,6 +227,7 @@ body {
   color: white;
   width: 130px;
   padding: 8px;
+  margin-right: 18px;
   border-radius: 10px;
   border: none;
 }
@@ -160,118 +242,7 @@ body {
   text-decoration: none;
   color: aliceblue;
 }
-/**********************************/
 
-.container-main{
-  position: relative;
-  max-width: 910px;
-  margin: 0 auto;
-}
-
-.bestsellers {
-  margin-top: 60px;
-  font-weight: 700;
-  color: #EA5455;
-}
-
-
-.container-scroll {
-  
-  display: flex;
-  justify-content: center;
-  
-}
-
-.arrow-left{
-
-  position: absolute;
-  content: "";
-  width: 0px;
-  height: 0px;
-  border-top: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 15px solid transparent;
-  border-left: 15px solid #EA5455;
-  transform: rotate(180deg);
-  top: 12%;
-  left: -12%;
-}
-
-.arrow-right{
-
-  position: absolute;
-  content: "";
-  width: 0px;
-  height: 0px;
-  border-top: 15px solid transparent;
-  border-right: 15px solid #EA5455;
-  border-bottom: 15px solid transparent;
-  border-left: 15px solid transparent;
-  transform: rotate(180deg);
-  top: 12%;
-  right: -12%;
-}
-
-.box-shadow {
-  margin: 30px 20px 0px 0px;
-  padding: 18px 18px 6px 18px;
-  box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534);
-}
-
-.img-all {
-  height: 155px;
-  width: 170px;
-}
-
-.ham {
-  margin-top: 3px;
-  font-weight: 700;
-}
-
-.price-stock {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 8px;
-}
-
-.price-stock p:nth-child(2) {
-  color: rgb(30, 223, 30);
-}
-
-/*Offre par catégorie*/
-.offer {
-  display: flex;
-  font-weight: 700;
-  align-items: baseline;
-  color: #EA5455;
-  margin: 50px 0px 25px 0px;
-}
-
-.see-all {
-  margin-left: 10px;
-  font-size: 12px;
-  text-decoration: none;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 25px;
-}
-
-.box-grid {
-  height: 118px;
-  width: 110px;
-  border-radius: 40px;
-  text-align: center;
-  color: white;
-  background-color: #2D4059;
-}
-
-.box-text {
-  margin-top: 26px;
-}
-/****************************/
 .choose {
   margin: 0 auto;
 }
@@ -285,7 +256,6 @@ body {
 .choose_select {
   display: flex;
   justify-content: space-between;
-  
 }
 
 .choose_img {
@@ -299,8 +269,10 @@ body {
   width: 230px;
   margin-bottom: 30px;
 }
-.choose_img p{
+
+.choose_img p {
   color: #EA5455;
   font-weight: bold;
 }
+
 /*# sourceMappingURL=style.css.map */
