--- a/styles/header.scss
+++ b/styles/header.scss
@@ -40,6 +40,7 @@ body{
     margin-right: 22px;
 }
 .icons{
+    color: white;
     background-color: #EA5455;
     border-radius: 50%;
     padding: 1.5px 5.5px 1.5px 5.5px;
@@ -57,8 +58,7 @@ body{
     padding: 20px;
     align-items: center;
     align-content: center;
-    text-align: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 .search{
     padding-left: 170px;
@@ -66,7 +66,6 @@ body{
 .search select{
     color: black;
     height: 35px;
-    width: 130px;
     border-radius: 8px;
     padding-right: 10px;
 }
@@ -82,6 +81,7 @@ body{
     color: white;
     width: 130px;
     padding: 8px;
+    margin-right: 18px;
     border-radius: 10px ;
     border: none;
 }
@@ -106,8 +106,9 @@ body{
     font-weight: bold;
 }
 .choose_select{
-    display: flex;justify-content: space-around;
-    padding: 0px 150px 0px 125px;
+    display: flex;
+    justify-content: space-between;
+    
 }
 .choose_img{
    margin-bottom: 50px;
