--- a/styles/home.scss
+++ b/styles/home.scss
@@ -3,31 +3,33 @@
 }
 
 .container-main{
-    max-width: 1050px;
+    max-width: 950px;
     margin: 0 auto;
 }
 
 .bestsellers{
-    margin-top: 60px;
+    margin-top: 70px;
     font-weight: 700;
     color: #EA5455;
 }
 
 .container-scroll{
+    margin: 0 auto;
     display: flex;
-    justify-content: space-around;
+    max-width: 950px;
+   
 }
 
 .box-shadow{
-    margin: 30px 0px 0px 0px;
-    padding: 8px;
+    margin: 30px 20px 0px 0px;
+    padding: 18px;
 
     box-shadow: 0px 0px 10px 1px rgba(192, 192, 192, 0.534) ;
 }
 
 .img-all{
-    height: 135px;
-    width: 150px;
+    height: 160px;
+    width: 190px;
 }
 
 .ham{
