--- a/styles/header.scss
+++ b/styles/header.scss
@@ -15,7 +15,7 @@ body{
     display: flex;
     align-items: center;
 }
-.logo_black h1{
+.logo_black a{
     margin-left: 15px;
     font-weight: bold;
 }
