--- a/style.css
+++ b/style.css
@@ -206,8 +206,7 @@ table {
 
 .choose_select {
   display: flex;
-  justify-content: space-around;
-  padding: 0px 135px 0px 135px;
+  justify-content: space-between;
 }
 
 .choose_img {
