--- a/styles/home.scss
+++ b/styles/home.scss
@@ -97,8 +97,9 @@
     font-weight: bold;
 }
 .choose_select{
-    display: flex;justify-content: space-around;
-    padding: 0px 135px 0px 135px;
+    display: flex;
+    justify-content: space-between;
+    
 }
 .choose_img{
    margin-bottom: 50px;
