--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -53,3 +53,9 @@
     font-size: 12px;
     padding-top: 10px;
 }
+
+@media screen and (max-width: 980px) {
+    .footer_container{
+        flex-direction: column;
+    }
+}
